--- a/thesis.bib
+++ b/thesis.bib
@@ -3734,3 +3734,22 @@ URL = {https://doi.org/10.1137/0216006},
 	title = {\textit{VESTA 3} three-dimensional visualization of crystal, volumetric and morphology data},
 	journal = {J Appl Cryst}
 }
+@article{Blades_1956,
+	doi = {10.1139/v56-035},
+	url = {https://doi.org/10.1139%2Fv56-035},
+	year = 1956,
+	month = {mar},
+	publisher = {Canadian Science Publishing},
+	volume = {34},
+	number = {3},
+	pages = {233--237},
+	author = {A. T. Blades and W. H. Fleming and H. G. Thode},
+	title = {{The} {Ratio} {of} {Xenon} {to} {Krypton} {in} $^\text{235}$U {Fission}},
+	journal = {Can. J. Chem.}
+}
+@techreport{engel1971xenon,
+  title={Xenon behavior in the molten salt reactor experiment},
+  author={Engel, JR and Steffy, RC},
+  year={1971},
+  institution={Oak Ridge National Lab.}
+}
